syntax = "proto3";
package rpc;
option go_package = "github.com/jeevan/golemdb/rpc";

import "google/protobuf/empty.proto";

message JoinRequest {
    string server_id = 1;
    string address = 2;
}

message RemoveRequest {
    string server_id = 1;
    string address = 2;
}

message StatusRequest {
    string server_id = 1;
    string address = 2;
}

message StatusResponse {
    bytes data = 1;
}

service Raft {
    rpc Join(JoinRequest) returns (google.protobuf.Empty) {}
    rpc Remove(RemoveRequest) returns (google.protobuf.Empty) {}
    rpc Status(StatusRequest) returns (StatusResponse) {}
} 